@@ -1,3 +1,8 @@
+2006-09-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/thbrk/thbrk.c (brk_do): (Optimization) In recovery mode, stop
+	immediately when first solution is found.
+
 2006-09-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thbrk/thbrk.c (brk_recover, brk_do): (Optimization) Remembered 
@@ -1112,13 +1117,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.105 2006-09-02 16:57:47 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.106 2006-09-03 01:41:28 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.105 2006-09-02 16:57:47 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.106 2006-09-03 01:41:28 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
